discussion/kv_engine/174501/174501_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Modernise FailoverTable with nlohmann::json

Remove the std::string and store the table in a nlohmann::json object

Change-Id: I81041672dd5ac5d943b1ec465b95f55df5bf7b8c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-05 10:04:53.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-05 10:15:34.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38543/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/failover-table.h:214:21:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38543/ )

CMake error: CMakeLists.txt:134 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38543/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17269/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/failover-table.cc:330:21: error: out-of-line definition of "constuctFromJSON" does not match any declaration in "FailoverTable"; did you mean "constructFromJSON"? [clang-diagnostic-error]
bool FailoverTable::constuctFromJSON(const nlohmann::json& json) {
                    ^~~~~~~~~~~~~~~~
                    constructFromJSON
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/failover-table.h:195:11: note: "constructFromJSON" declared here
     bool constructFromJSON(const nlohmann::json& json);
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/failover-table.h:214:21: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
     nlohmann::json cachedTableJSON;
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/failover_table_test.cc:497:20: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
    nlohmann::json failover_json = {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/failover_table_test.cc:510:36: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
    EXPECT_NE(failover_json, table.getJSON());
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/failover_table_test.cc:516:20: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
    nlohmann::json failover_json = {{{"id", 0}, {"seq", 0}},
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/failover_table_test.cc:523:36: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
    EXPECT_NE(failover_json, table.getJSON());
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17269/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/failover-table.cc:330:21:
error: out-of-line definition of "constuctFromJSON" does not match any declaration in "FailoverTable"; did you mean "constructFromJSON"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17269/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45896/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/failover-table.cc(330): error C2039: "constuctFromJSON": is not a member of "FailoverTable" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45896/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18205/ : FAILURE

Compile error at [2022-05-05T10:15:01.908Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/failover-table.cc:330:21:
error: out-of-line definition of "constuctFromJSON" does not match any declaration in "FailoverTable"; did you mean "constructFromJSON"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18205/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6880/ : FAILURE

Compile error at [2022-05-05T10:06:19.098Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/failover-table.cc:330:21:
error: out-of-line definition of "constuctFromJSON" does not match any declaration in "FailoverTable"; did you mean "constructFromJSON"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6880/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19368/ : FAILURE

Compile error at [2022-05-05T10:07:59.665Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/failover-table.cc:330:6:
error: no declaration matches ?bool FailoverTable::constuctFromJSON(const json&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19368/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6972/ : FAILURE

Compile error at [2022-05-05T10:07:36.433Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/failover-table.cc:330:6:
error: no declaration matches ?bool FailoverTable::constuctFromJSON(const json&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6972/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20052/ : FAILURE

Compile error at [2022-05-05T10:07:09.527Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/failover-table.cc:330:21:
error: out-of-line definition of "constuctFromJSON" does not match any declaration in "FailoverTable"; did you mean "constructFromJSON"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20052/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19026/ : FAILURE

Compile error at [2022-05-05T10:06:52.486Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/failover-table.cc:330:6:
error: no declaration matches ?bool FailoverTable::constuctFromJSON(const json&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19026/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27426/ : FAILURE

Compile error at [2022-05-05T10:09:10.730Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/failover-table.cc:330:21:
error: out-of-line definition of "constuctFromJSON" does not match any declaration in "FailoverTable"; did you mean "constructFromJSON"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27426/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16261/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
